--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/Base.Theme.AppCompat.Light">
-            <activity android:name=".MeteringActivity"
+            <activity android:name=".DalnometerActivity"
                 android:screenOrientation="landscape">
             </activity>
 
