--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.example.grass.dalnometr">
+    package="com.example.grass.dalnometr">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/Base.Theme.AppCompat.Light">
+        <activity
+            android:name=".DalnometerActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".calibration.CalibrationActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".calibration.DalCalibrActivity"
+            android:screenOrientation="landscape"></activity>
 
-        <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/Base.Theme.AppCompat.Light">
-            <activity android:name=".DalnometerActivity"
-                android:screenOrientation="landscape">
-            </activity>
+        <activity
+            android:name=".Splash"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <activity android:name=".Splash"
-                android:screenOrientation="portrait">
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!--
+                 ATTENTION: This was auto-generated to add Google Play services to your project for
+                 App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
-                <intent-filter>
-
-                    <action android:name="android.intent.action.MAIN"/>
-
-                    <category android:name="android.intent.category.LAUNCHER"/>
-
-                </intent-filter>
-            </activity>
-            <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-                 App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-            <meta-data
-                android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version" />
-
-        </application>
+    </application>
 
 </manifest>
