--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Base.Theme.AppCompat.Light">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".DalnometerActivity"
             android:screenOrientation="reverseLandscape"></activity>
